openshift/old/openshift1/iip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: iip
  name: iip
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: iip
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/myquipnet: "true"
        io.kompose.service: iip
    spec:
      containers:
      - image: docker-registry.default.svc:5000/my-test/iip
        imagePullPolicy: ""
        name: ca-iip
        resources: {}
        volumeMounts:
        - mountPath: /data/
          name: data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
