openshift/old/openshift1/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/myquipnet: "true"
        io.kompose.service: mongo
    spec:
      containers:
      - image: docker-registry.default.svc:5000/my-test/mongo
        imagePullPolicy: ""
        name: ca-mongo
        resources: {}
        volumeMounts:
        - mountPath: /mongodb/db
          name: db
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: db
status: {}
