openshift/old/openshift1/pathdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: quip-pathdb
  name: pathdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quip-pathdb
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/myquipnet: "true"
        io.kompose.service: quip-pathdb
    spec:
      containers:
      - args:
        - /config/pathdb_pre.sh
        image: docker-registry.default.svc:5000/my-test/pathdb
        imagePullPolicy: ""
        name: quip-pathdb
        ports:
        - containerPort: 8443
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /data/
          name: data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
