openshift/old/openshift1/segloader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: segloader
  name: segloader
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: segloader
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/my_quip_network: "true"
        io.kompose.service: segloader
    spec:
      containers:
      - image: segloader
        imagePullPolicy: ""
        name: quip-segloader
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
