openshift/old/openshift1/pathdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f quip-pathdb.yml.PRISM -o openshift
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: quip-pathdb
  name: quip-pathdb
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 8443
  - name: "80"
    port: 80
    targetPort: 8080
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: quip-pathdb
status:
  loadBalancer: {}
